--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,14 @@ html {
     border-radius: 5px;
     height: 150px;
     margin: 20px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+    font-size: 1.2em;
+}
+
+.screen > div {
+    padding: 0 15px 10px;
 }
 
 .buttons{
