--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,11 @@ html {
     /* border: solid 1px white; */
 }
 
-.buttons>div {
+.buttons>button {
     text-align: center;
-    /* border: solid 1px white; */
-    padding-top: 25%;
+    border: solid 1px black;
+    /* padding-top: 25%; */
     border-radius: 50px;
-    font-weight: bold;
     font-size: 1.1em;
     cursor: pointer;
 }
