--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ html {
 .clear {
     background-color: rgb(138, 19, 19)}
 
-.symbol, .brackets {
+.symbol, .brackets, .percent {
     background-color: rgb(44, 27, 105);
 }
 
