--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,12 @@ html {
     padding: 0 15px 10px;
 }
 
+button:active {
+    opacity: 0.6;
+    border-radius: 50px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 .buttons{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
